[package]
name = "hashevals"
version = "0.1.0"
edition = "2021"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Minimalistic Rust toolkit for hash function quality analysis. Tests avalanche effect, differential patterns, and statistical distribution across variable-length n-grams."
license = "Apache-2.0"
repository = "https://github.com/ashvardanian/HashEvals"
keywords = ["hash", "crypto", "benchmark", "avalanche", "testing"]
categories = ["algorithms", "cryptography", "development-tools"]
readme = "README.md"

[[bin]]
name = "hashevals"
path = "main.rs"

[dependencies]
# Random number generation
rand = "0.9"
rand_chacha = "0.9"

# Hash functions
stringzilla = "4"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
gxhash = "3.5"
crc32fast = "1.5"
blake3 = "1.8"
murmur3 = "0.5"
cityhash = "0.1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Parallelization
fork_union = "2.2.9"

# Table formatting and CSV export
tabled = "0.20"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
